Result form and questions

--- a/src/questions.properties
+++ b/src/questions.properties
@@ -14,8 +14,38 @@ answer-3-1 = GIMP
 answer-3-2 = Microsoft Office
 answer-3-3 = Unity3D
 answer-3-4 = 3D Max
-question4 = Which of these licenses is not applied to open-source software?
-answer-4-1 = 1
-answer-4-2 = 2
-answer-4-3 = 3
-answer-4-4 = 4
+question4 = Which statement is not true for FOSS
+answer-4-1 = FOSS is not available for you
+answer-4-2 = Everyone can help create those softwares
+answer-4-3 = FOSS is free for everybody
+answer-4-4 = There are many licenses for FOSS
+question5 = What is the license of Linux kernel?
+answer-5-1 = GNU General Public License
+answer-5-2 = MIT License
+answer-5-3 = Apache License
+answer-5-4 = Creative Commons Public Domain
+question6 = What is git?
+answer-6-1 = Free and open source distributed version control system
+answer-6-2 = Great International Tools
+answer-6-3 = Open source office program
+answer-6-4 = Free and open game engine
+question7 = Which of these mobile OS is not FOSS?
+answer-7-1 = iOS
+answer-7-2 = Android
+answer-7-3 = Firefox OS
+answer-7-4 = Ubuntu
+question8 = Which of these programs is open-source?
+answer-8-1 = GIMP
+answer-8-2 = Microsoft Office
+answer-8-3 = Unity3D
+answer-8-4 = 3D Max
+question9 = Which of these is not a linux distribution
+answer-9-1 = Haiku
+answer-9-2 = Debian
+answer-9-3 = Ubuntu
+answer-9-4 = Fedora
+question10 = What is the official linux logo?
+answer-10-1 = Tux
+answer-10-2 = Large dark antelope head
+answer-10-3 = Circle of Friends
+answer-10-4 = A window
