--- a/src/questions.properties
+++ b/src/questions.properties
@@ -4,46 +4,57 @@ answer-1-1 = Linus Torvalds
 answer-1-2 = Bill Gates
 answer-1-3 = Jack Dorsey
 answer-1-4 = Tim Cook
+
 question2 = What "FOSS" means?
 answer-2-1 = Free and open-source software
 answer-2-2 = Fun and open-source software
 answer-2-3 = Freedom open-source software
 answer-2-4 = Full operational service software
+
 question3 = Which of these programs is open-source?
 answer-3-1 = GIMP
 answer-3-2 = Microsoft Office
 answer-3-3 = Unity3D
 answer-3-4 = 3D Max
-question4 = Which statement is not true for FOSS
+
+question4 = Which statement is NOT true for FOSS
 answer-4-1 = FOSS is not available for you
-answer-4-2 = Everyone can help create those softwares
+answer-4-2 = Everyone can help create those software
 answer-4-3 = FOSS is free for everybody
 answer-4-4 = There are many licenses for FOSS
+
 question5 = What is the license of Linux kernel?
 answer-5-1 = GNU General Public License
 answer-5-2 = MIT License
 answer-5-3 = Apache License
 answer-5-4 = Creative Commons Public Domain
+
 question6 = What is git?
-answer-6-1 = Free and open source distributed version control system
+answer-6-1 = Free and open source version control system
 answer-6-2 = Great International Tools
 answer-6-3 = Open source office program
 answer-6-4 = Free and open game engine
+
 question7 = Which of these mobile OS is not FOSS?
 answer-7-1 = iOS
 answer-7-2 = Android
 answer-7-3 = Firefox OS
 answer-7-4 = Ubuntu
-question8 = Which of these programs is open-source?
-answer-8-1 = GIMP
-answer-8-2 = Microsoft Office
-answer-8-3 = Unity3D
-answer-8-4 = 3D Max
+
+question8 = What is annual price for using FOSS?
+answer-8-1 = It's free
+answer-8-2 = Depends on size of organization
+answer-8-3 = The same as commercial software
+answer-8-4 = About 5000 USD per year
+
+#Haiku comes from BeOS and it is not based on linux
 question9 = Which of these is not a linux distribution
 answer-9-1 = Haiku
 answer-9-2 = Debian
 answer-9-3 = Ubuntu
 answer-9-4 = Fedora
+
+#Second answer - GNU, 3. Ubuntu
 question10 = What is the official linux logo?
 answer-10-1 = Tux
 answer-10-2 = Large dark antelope head
